--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,4 @@
 /Resources/Shaders/HDRBrightPass.psh.h
 /Resources/Shaders/GaussianBlurY.psh.h
 /Resources/Shaders/GaussianBlurX.psh.h
+/Resources/Shaders/AntiAliasing.psh.h
