Rename extension of shaders to HLSL

--- a/.gitignore
+++ b/.gitignore
@@ -7,16 +7,16 @@
 /.vs/GraphicsPostProcesses/v16
 /x64/Debug
 /Resources/Textures
-/Resources/Shaders/ScreenQuad.vsh.h
-/Resources/Shaders/MeshStandard.vsh.h
-/Resources/Shaders/MeshStandard.psh.h
-/Resources/Shaders/HDRToneMapping.psh.h
 /Resources/Meshes
-/Resources/Shaders/HDRBrightPass.psh.h
-/Resources/Shaders/GaussianBlurY.psh.h
-/Resources/Shaders/GaussianBlurX.psh.h
-/Resources/Shaders/AntiAliasing.psh.h
 /Resources/Shaders/AddPointLightToBufferCS.hlsl.h
 /Resources/Shaders/SetPointLightCS.hlsl.h
 /Resources/Shaders/DistributePointLightCS.hlsl.h
 /Resources/Shaders/CalculateClusterCoordinatesCS.hlsl.h
+/Resources/Shaders/AntiAliasingPS.hlsl.h
+/Resources/Shaders/ScreenQuadVS.hlsl.h
+/Resources/Shaders/MeshStandardVS.hlsl.h
+/Resources/Shaders/MeshStandardPS.hlsl.h
+/Resources/Shaders/HDRToneMappingPS.hlsl.h
+/Resources/Shaders/HDRBrightPassPS.hlsl.h
+/Resources/Shaders/GaussianBlurYPS.hlsl.h
+/Resources/Shaders/GaussianBlurXPS.hlsl.h
