--- a/GraphicsPostProcesses.vcxproj.filters
+++ b/GraphicsPostProcesses.vcxproj.filters
@@ -141,7 +141,7 @@
     <ClCompile Include="ComputeObject.cpp">
       <Filter>Исходные файлы\GraphicsSceneManagement\GraphicsObjects</Filter>
     </ClCompile>
-    <ClCompile Include="ParticleSystemManager.cpp">
+    <ClCompile Include="ParticleSystem.cpp">
       <Filter>Исходные файлы\GraphicsSceneManagement\GraphicsObjects</Filter>
     </ClCompile>
   </ItemGroup>
@@ -224,7 +224,7 @@
     <ClInclude Include="ComputeObject.h">
       <Filter>Файлы заголовков\GraphicsSceneManagement\GraphicsObjects</Filter>
     </ClInclude>
-    <ClInclude Include="ParticleSystemManager.h">
+    <ClInclude Include="ParticleSystem.h">
       <Filter>Файлы заголовков\GraphicsSceneManagement\GraphicsObjects</Filter>
     </ClInclude>
   </ItemGroup>
