UI System: Sprites, Text(In progress) and triangulation optimization & improvements

--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,5 @@
 /Resources/Shaders/ParticleStandardVS.hlsl.h
 /Resources/Shaders/ParticleStandardPS.hlsl.h
 /Resources/Shaders/ParticleStandardGS.hlsl.h
+/Resources/Shaders/UISpriteStandardVS.hlsl.h
+/Resources/Shaders/UISpriteStandardPS.hlsl.h
