--- a/GraphicsPostProcesses.vcxproj.filters
+++ b/GraphicsPostProcesses.vcxproj.filters
@@ -67,6 +67,12 @@
     <Filter Include="Файлы заголовков\GraphicsCore\GraphicsUIManagement">
       <UniqueIdentifier>{645bdcd1-57ae-4096-af11-33216772c479}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Исходные файлы\HelperClasses">
+      <UniqueIdentifier>{9a917a70-df2f-412e-8ead-b047dfc28c68}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Файлы заголовков\HelperClasses">
+      <UniqueIdentifier>{ee7607bb-c981-491d-874d-52ac98df46da}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -156,6 +162,12 @@
     <ClCompile Include="UISystem.cpp">
       <Filter>Исходные файлы\GraphicsCore\GraphicsUIManagement</Filter>
     </ClCompile>
+    <ClCompile Include="RingBuffer.cpp">
+      <Filter>Исходные файлы\HelperClasses</Filter>
+    </ClCompile>
+    <ClCompile Include="TextUI.cpp">
+      <Filter>Исходные файлы\GraphicsCore\GraphicsUIManagement</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="stdafx.h">
@@ -243,6 +255,12 @@
       <Filter>Файлы заголовков\GraphicsCore\GraphicsUIManagement</Filter>
     </ClInclude>
     <ClInclude Include="UISystem.h">
+      <Filter>Файлы заголовков\GraphicsCore\GraphicsUIManagement</Filter>
+    </ClInclude>
+    <ClInclude Include="RingBuffer.h">
+      <Filter>Файлы заголовков\HelperClasses</Filter>
+    </ClInclude>
+    <ClInclude Include="TextUI.h">
       <Filter>Файлы заголовков\GraphicsCore\GraphicsUIManagement</Filter>
     </ClInclude>
   </ItemGroup>
