--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,10 @@
 /Resources/Shaders/UISpriteStandardPS.hlsl.h
 /Resources/Shaders/UITextStandardVS.hlsl.h
 /Resources/Shaders/UITextStandardPS.hlsl.h
+/Resources/Shaders/OnlyVertexIdOutputVS.hlsl.h
+/Resources/Shaders/EmptyVS.hlsl.h
+/Resources/Shaders/ClothRecalculateTangentsGS.hlsl.h
+/Resources/Shaders/ClothApplySelfCollisionCS.hlsl.h
+/Resources/Shaders/ClothApplyForcesCS.hlsl.h
+/Resources/Shaders/ClothApplyExternalConstraintsCS.hlsl.h
+/Resources/Shaders/ClothApplyConstaintsCS.hlsl.h
