--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,5 @@
 /Resources/Shaders/ClothApplyExternalConstraintsCS.hlsl.h
 /Resources/Shaders/ClothApplyConstaintsCS.hlsl.h
 /Resources/Shaders/ClothRecalculateTangentsCS.hlsl.h
+/Resources/Shaders/ClothStandardVS.hlsl.h
+/Resources/Shaders/ClothStandardPS.hlsl.h
